# curtisma.github.io

./: 404.html  CNAME  LICENSE  README.md  Taskfile.yaml  _config.yml  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  setup
.github/workflows/: ci.yml
blog/: index.html
docs/: README.md  index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: welcome.md
docs/projects/: index.md
docs/projects/cicc-panel-oshic/: cicc_panel_oshic.md
docs/projects/senior_design/: MajorReports.htm  Research.htm  TeamMembers.htm
projects/: index.html
projects/senior_design/: Advisors.htm  Description.htm  DesignDocs.htm  Pictures.htm  Presentations.htm  WeeklyReports.htm  index.htm  isuP.css
projects/senior_design/DesignDocs/: LCD_lib_SD.c
projects/senior_design/MajorReports/: Project_Design_Review_12-6-10.pptx  SeniorDesignPosterFinal.pptx  Senior_Design_Project_Plan_Complete.docx
projects/senior_design/MeetingPresentations/: BorrowedMaterials.xlsx  Draft Project Proposal 9-5-10.pptx  Draft_Project_Design_11-7-10.pptx  Gantt Chart Revised 11-30-10.xlsx  MeetingNotes_10_21_10.docx  Midterm Presentation Feb 13th.pptx  Senior Design Intro.pptx  Senior Design Parts Order.xlsx  Timeline.xlsx  senior_design_budget.xlsx
projects/senior_design/ResearchDocs/: LCD_Initial_Research.docx  LCD_Selection.docx  MicrocontrollerFinalSelection.docx  Microcontroller_Selection.docx  Temperature_Sensor_Selection.docx  Wireless Connectivity Module.docx
projects/senior_design/WeeklyReports/: F10-19 ProgressRep1.docx  (+15 more)
(+10 files in other folders)
